<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/startDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/endDate"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/discount"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>