<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".add_offers">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="260sp"
        android:background="@drawable/wave__1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/editTextDate3"
            android:layout_width="341dp"
            android:layout_height="53dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/startDate"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.824" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="347dp"
            android:layout_height="74dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="51dp"
            android:text="@string/addoffer"
            android:textAlignment="viewStart"
            android:textColor="#020202"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textAlignment="center" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="337dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/discount"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Description"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#328CCF"
        android:text="submit"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/endDate"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

</androidx.constraintlayout.widget.ConstraintLayout>